# Customized-Virtual-File-System

./: .gitignore  CMakeLists.txt  CVFS.cpp  CVFS.h  README.md  cvfs_wrapper.cpp  cvfs_wrapper.h  directory.cpp  directory.h  main_cli.cpp  main_gui.cpp  main_original.cpp  persistence.cpp  persistence.h
.github/workflows/: build.yml
gui/: filecontentdialog.cpp  filecontentdialog.h  filemanagerpanel.cpp  filemanagerpanel.h  filepropertiesdialog.cpp  filepropertiesdialog.h  filesystemmodel.cpp  filesystemmodel.h  flowchartwidget.cpp  flowchartwidget.h  mainwindow.cpp  mainwindow.h  systeminfowidget.cpp  systeminfowidget.h  visualizationengine.cpp  visualizationengine.h  visualizationpanel.cpp  visualizationpanel.h
installer/: CVFS_Setup.iss
scripts/: package_windows.bat
